fixing columns and typo in locales

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,6 +1,6 @@
 es:
   hello: "Ola amigos"
-  goddbye: "Hasta la vista"
+  goodbye: "Hasta la vista"
   cabins:
     index:
       title: "Nuestras cabanas en la montana"
