--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -3,7 +3,7 @@ pt:
     formats:
       my_own_format: "%Y"
   hello: "Bom dia amigos"
-  goddbye: "Ate mais tarde"
+  goodbye: "Ate mais tarde"
   cabins:
     index:
       title: "Nossos chalés na montanha"
