--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,7 +24,7 @@ en:
     formats:
       my_own_format: "%Y"
   hello: "Hello friends"
-  goddbye: "See you later"
+  goodbye: "See you later"
   cabins:
     index:
       title: "Our cabins in the woods"
