--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,6 +1,6 @@
 fr:
   hello: "Bonjour mes amis"
-  goddbye: "A plus tard"
+  goodbye: "A plus tard"
   cabins:
     index:
       title: "Nos chalets en montaigne"
